chore: install prettier and execute auto format.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "pre": "prettier --write './**/*.{js,ts,tsx}'"
   },
   "dependencies": {
     "expo": "~36.0.0",
@@ -25,6 +26,7 @@
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
     "babel-preset-expo": "~8.0.0",
+    "prettier": "^1.19.1",
     "typescript": "~3.6.3"
   },
   "private": true
