--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pre": "prettier --write './**/*.{js,ts,tsx}'"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
     "native-base": "^2.13.8",
@@ -22,6 +23,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
