--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
     "firebase": "^7.7.0",
+    "lodash": "^4.17.15",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
