--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "pre": "prettier --write './**/*.{js,ts,tsx}'",
-    "seed": "ts-node src/utils/seeds"
+    "seed": "ts-node src/utils/seeds",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -31,10 +32,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/jest": "^25.1.0",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
+    "jest": "^25.1.0",
+    "jest-expo": "^36.0.1",
     "prettier": "^1.19.1",
+    "react-test-renderer": "^16.12.0",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
     "typescript": "~3.6.3"
   },
