--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,7 @@ jobs:
         node-version: '12.x'
     - name: Install Dependencies
       run: yarn install
+    - name: Set env file
+      run: cp -n dotenv.sample.ts env.ts
     - name: Run tests
       run: yarn test
