--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,35 @@
-name: CI
-
+name: Test
 on: [push]
-
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Setup Nodejs
       uses: actions/setup-node@v1
-      with: 
-        node-version: '12.x'
+      with:
+        node-version: 12.x
     - name: Install Dependencies
       run: yarn install
     - name: Set env file
       run: cp -n dotenv.sample.ts env.ts
     - name: Run tests
       run: yarn test
+
+  # publish:
+  #   runs-on: ubuntu-latest
+  #   needs: [test]
+  #   steps:
+  #     - uses: actions/checkout@v1
+  #     - name: Setup Nodejs
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12.x
+  #     - run: yarn install
+  #     - name: publish to expo
+  #       uses: expo/expo-github-action@v5
+  #       with:
+  #         expo-version: 3.x
+  #         expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+  #         expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+  #     - run: expo publish
