feat: change app name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "domitory",
-    "slug": "domitory",
+    "name": "dormio",
+    "slug": "dormio",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
