--- a/package.json
+++ b/package.json
@@ -28,13 +28,20 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.1.0",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.11.0",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@types/jest": "^25.1.0",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
+    "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
     "jest": "^25.1.0",
