--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.11.0",
-    "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1"
+    "redux-firestore": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
