--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/bottom-tabs": "^5.0.5",
+    "@react-navigation/native": "^5.0.5",
+    "@react-navigation/stack": "^5.0.5",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
     "firebase": "^7.7.0",
@@ -26,9 +29,6 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.1.0",
     "redux": "^4.0.5",
