--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
+    "expo-cli": "^3.13.1",
     "jest": "^25.1.0",
     "jest-expo": "^36.0.1",
     "prettier": "^1.19.1",
