--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "lib": ["es6"],
     "moduleResolution": "node",
     "noEmit": true,
+    "noImplicitAny": true,
     "strict": true,
-    "target": "esnext",
-    "typeRoots": ["types", "node_modules/@types"]
+    "target": "esnext"
   },
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
