--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
-name: Test
-on: [push]
+name: GitHub Actions
+on:
+  push:
+    branches:
+    - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,21 +18,10 @@ jobs:
       run: cp -n dotenv.sample.ts env.ts
     - name: Run tests
       run: yarn test
-
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   needs: [test]
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - name: Setup Nodejs
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12.x
-  #     - run: yarn install
-  #     - name: publish to expo
-  #       uses: expo/expo-github-action@v5
-  #       with:
-  #         expo-version: 3.x
-  #         expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
-  #         expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
-  #     - run: expo publish
+    - name: publish to expo
+      uses: expo/expo-github-action@v5
+      with:
+        expo-version: 3.x
+        expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+        expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+    - run: expo publish
