--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,6 @@ jobs:
         node-version: 12.x
     - name: Install Dependencies
       run: yarn install
-    - name: Set env file
-      run: cp -n dotenv.sample.ts env.ts
     - name: Run tests
       run: yarn test
     - name: publish to expo
@@ -24,4 +22,12 @@ jobs:
         expo-version: 3.x
         expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
         expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
-    - run: expo publish
+        API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+        AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+        DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+        PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+        MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+        APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+        MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+
