--- a/package.json
+++ b/package.json
@@ -12,24 +12,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.1",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
-    "dotenv": "^8.2.0",
-    "expo": "~36.0.0",
-    "expo-font": "~8.0.0",
-    "firebase": "^7.11.0",
+    "expo": "^37.0.4",
+    "expo-font": "~8.1.0",
+    "firebase": "7.9.0",
     "lodash": "^4.17.15",
-    "native-base": "^2.13.12",
-    "react": "~16.13.0",
+    "native-base": "2.13.8",
+    "react": "~16.9.0",
     "react-dom": "~16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "2.3.0",
+    "react-native-screens": "2.2.0",
     "react-native-web": "~0.12.2",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.1.2",
@@ -41,6 +40,7 @@
     "@types/jest": "^25.1.4",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.23",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
@@ -48,6 +48,7 @@
     "jest": "^25.1.0",
     "jest-expo": "^36.0.1",
     "prettier": "^1.19.1",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "^16.13.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
