--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,18 @@ jobs:
       run: yarn install
     - name: Run tests
       run: yarn test
-    - name: publish to expo
-      uses: expo/expo-github-action@v5
-      with:
-        expo-version: 3.x
-        expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
-        expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
-        API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-        AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-        DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
-        PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-        STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-        MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-        APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-        MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+    # - name: publish to expo
+    #   uses: expo/expo-github-action@v5
+    #   with:
+    #     expo-version: 3.x
+    #     expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+    #     expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+    #     API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+    #     AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+    #     DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+    #     PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+    #     STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+    #     MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+    #     APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+    #     MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
 
